# fuckyoumcp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  server.rs
src/ps/: mod.rs  pool.rs
src/win32/: clipboard.rs  filesystem.rs  input.rs  mod.rs  network.rs  process.rs  registry.rs  screen.rs  service.rs  sysinfo.rs
